--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,109 +1,19 @@
-html,
-body {
-	font-family:'Open Sans';
-	font-weight:200;
-    height: 100%;
-	/*background: rgba(0, 0, 0, 0) url("http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/shattered.png") repeat scroll 0 0;*/
+.panel-heading .close{
+	margin-top:10px
+}
+.configuration .panel-body{
+	transition: all 1s ease;
+	overflow:hidden;
+}
+.configuration .panel-body.status-up{
+	max-height:500px;
+}
+.configuration .panel-body.status-down{
+	max-height:0px;
+	padding-bottom:0;
 }
 
-h1,h2,h3,h4,h5,h6{
-	font-family:'Merriweather';
-}
-
-.wrap {
-    min-height: 100%;
-    height: auto;
-    margin: 0 auto -60px;
-    padding: 0 0 60px;
-}
-
-.wrap > .container {
-    padding: 70px 15px 20px;
-}
-
-.footer {
-    height: 60px;
-    background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
-    padding-top: 20px;
-}
-
-.jumbotron {
-    text-align: center;
-    background-color: transparent;
-}
-
-.jumbotron .btn {
-    font-size: 21px;
-    padding: 14px 24px;
-}
-
-.not-set {
-    color: #c55;
-    font-style: italic;
-}
-
-/* add sorting icons to gridview sort links */
-a.asc:after, a.desc:after {
-    position: relative;
-    top: 1px;
-    display: inline-block;
-    font-family: 'Glyphicons Halflings';
-    font-style: normal;
-    font-weight: normal;
-    line-height: 1;
-    padding-left: 5px;
-}
-
-a.asc:after {
-    content: /*"\e113"*/ "\e151";
-}
-
-a.desc:after {
-    content: /*"\e114"*/ "\e152";
-}
-
-.sort-numerical a.asc:after {
-    content: "\e153";
-}
-
-.sort-numerical a.desc:after {
-    content: "\e154";
-}
-
-.sort-ordinal a.asc:after {
-    content: "\e155";
-}
-
-.sort-ordinal a.desc:after {
-    content: "\e156";
-}
-
-.grid-view th {
-    white-space: nowrap;
-}
-
-.hint-block {
-    display: block;
-    margin-top: 5px;
-    color: #999;
-}
-
-.error-summary {
-    color: #a94442;
-    background: #fdf7f7;
-    border-left: 3px solid #eed3d7;
-    padding: 10px 20px;
-    margin: 0 0 15px 0;
-}
-
-.result textarea{
-	background:#eee;
-}
-
-.site p, .site li, .site pre{
-	font-size:18px;
-}
-.site p.help-block{
-	font-size:12px;
+.copyright{
+	color: #888;
+	font-size:0.9em;
 }
