--- a/web/css/site.css
+++ b/web/css/site.css
@@ -1,3 +1,12 @@
+.user-menu li{
+	display:inline-block;
+	margin: 0 10px;
+}
+
+.user-menu li:last-child{
+	margin-right: 0; 
+}
+
 .panel-heading .close{
 	margin-top:10px
 }
